@@ -30,6 +30,8 @@ Version 1.9.3
        modified later. (Stefan)
 - BUG: The manual pre-commit hook script was executed with
        an outdated or empty log message. (Stefan)
+- BUG: TortoiseIDiff only zoomed one image in overlap mode
+       when zooming with the Ctrl-mousewheel. (Stefan)
 
 Version 1.9.2
 - BUG: Performance issue if dragging lots of files
